<resources>
    <string name="app_name">SecurSOS</string>
    <string name="failure_network_connection">No Network Connection.</string>
    <string name="failure_server_error">Server Error</string>
    <string name="failure_database_error">Database Error</string>
    <string name="not_permission_location">Not access location</string>
    <string name="not_permission_camera">Not photo</string>
    <string name="not_permission_read_external">Not Read External Storage</string>
    <string name="not_permission_write_external">Not Write External Storage</string>
    <string name="not_permission_read_phone">Not Read Phone State</string>
    <string name="not_permission_read_calendar">Not read calendar</string>
    <string name="not_permission_write_calendar">Not write_calendar</string>
    <string name="lbl_register">Label Services Center</string>
    <string name="lbl_register_description">Insert number of Services Center received in phone</string>
    <string name="lbl_btn_validate">Validate Number</string>
    <string name="lbl_btn_cancel">Cancel</string>
    <string name="lbl_btn_reset">Reset</string>
    <string name="lbl_field_empty">Field empty</string>
    <string name="lbl_entity_empty">Entity empty</string>
    <string name="lbl_url_empty">Empty URL</string>
    <string name="lbl_line_empty">Empty Line</string>
    <string name="lbl_title_general">SecurCOM</string>
    <string name="lbl_configuration">Configuration</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_settings_menu">Configuration</string>
    <string name="lbl_btn_connection">Connection</string>
    <string name="lbl_btn_test">Test</string>
    <string name="lbl_btn_log">Log</string>
    <string name="lbl_btn_information">Information</string>
    <string name="lbl_btn_message">Message</string>
    <string name="lbl_connection">Connection Information</string>
    <string name="lbl_test">Test</string>
    <string name="lbl_information">Information</string>
    <string name="lbl_message">Message</string>
    <string name="lbl_log">Log</string>
    <string name="lbl_btn_send_test">Send Test</string>
    <string name="lbl_btn_send_message">Send Message</string>
    <string name="lbl_connection_with">Connection with:</string>
    <string name="lbl_details_contact">Details of contact:</string>
    <string name="lbl_switch_audio">Audio</string>
    <string name="lbl_switch_capture">Capture</string>
    <string name="lbl_switch_location">Location</string>
    <string name="lbl_manual_synchronization">Manual Synchronization</string>
    <string name="lbl_switch_on">ON</string>
    <string name="lbl_switch_off">OFF</string>
    <string name="lbl_description_image">Image</string>
    <string name="lbl_description_health">Emergency Health</string>
    <string name="lbl_description_policies">Emergency Policies</string>
    <string name="lbl_description_fireguard">Emergency Fireguard</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_my_location">My Location</string>
    <string name="device_first_log">New execution Application: </string>
    <string name="lbl_cpu">CPU: </string>
    <string name="lbl_model">Model: </string>
    <string name="lbl_manufacturer">Manufacturer: </string>
    <string name="lbl_brand">Brand: </string>
    <string name="lbl_android">Version Android: </string>
    <string name="last_position">Last position</string>
    <string name="value_null">Cannot transform a null value</string>
    <string name="init_recording">Init recording</string>
    <string name="recording">Recording</string>
</resources>
