<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <include layout="@layout/toolbar"/>

    <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/colorTransparent"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header_main">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <android.support.constraint.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/left_guideline"
                    app:layout_constraintGuide_percent=".05"
                    android:orientation="vertical"/>
            <android.support.constraint.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/right_guideline"
                    app:layout_constraintGuide_percent=".95"
                    android:orientation="vertical"/>
            <android.support.constraint.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/top_guideline"
                    app:layout_constraintGuide_percent=".20"
                    android:orientation="horizontal"/>
            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text = "@string/lbl_btn_connection"
                    android:background="@drawable/red_rounded_corners_pressed"
                    android:textColor="@color/colorSecondaryText"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                    app:layout_constraintRight_toRightOf="@+id/right_guideline"
                    app:layout_constraintTop_toTopOf="@+id/top_guideline"
                    android:id="@+id/bt_connect"/>

            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text = "@string/lbl_btn_test"
                    android:background="@drawable/red_rounded_corners_pressed"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_marginTop="30dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                    app:layout_constraintRight_toRightOf="@+id/right_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/bt_connect"
                    android:id="@+id/bt_test"/>

            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text = "@string/lbl_btn_log"
                    android:background="@drawable/red_rounded_corners_pressed"
                    android:textColor="@color/colorSecondaryText"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                    app:layout_constraintRight_toRightOf="@+id/right_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/bt_test"
                    android:id="@+id/bt_log"/>

            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text = "@string/lbl_btn_information"
                    android:background="@drawable/red_rounded_corners_pressed"
                    android:textColor="@color/colorSecondaryText"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                    app:layout_constraintRight_toRightOf="@+id/right_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/bt_log"
                    android:id="@+id/bt_information"/>

            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text = "@string/lbl_btn_message"
                    android:background="@drawable/red_rounded_corners_pressed"
                    android:textColor="@color/colorSecondaryText"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                    app:layout_constraintRight_toRightOf="@+id/right_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/bt_information"
                    android:id="@+id/bt_message"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
