<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:fillViewport="true">
    <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp">

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sync"
                android:background="@null"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/lbl_description_image"
                android:id="@+id/ib_health"
                android:scaleType="fitCenter"
                android:layout_marginTop="50dp"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sync"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:scaleType="fitCenter"
                android:contentDescription="@string/lbl_description_image"
                android:id="@+id/ib_policies"
                android:layout_marginTop="50dp"/>
        <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_description_health"
                android:textSize="23sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorSecondaryText"
                android:textAlignment="center"
                android:id="@+id/tv_title_health"
                android:fontFamily="@font/lato_light"/>

        <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_description_policies"
                android:textSize="23sp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorSecondaryText"
                android:textAlignment="center"
                android:id="@+id/tv_title_policies"
                android:fontFamily="@font/lato_light"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sync"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:scaleType="fitCenter"
                android:contentDescription="@string/lbl_description_image"
                android:id="@+id/ib_fireguard"
                android:layout_marginTop="50dp"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sync"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:contentDescription="@string/lbl_description_image"
                android:id="@+id/ib_four"
                android:scaleType="fitCenter"
                android:layout_marginTop="50dp"/>
        <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_description_fireguard"
                android:textSize="23sp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorSecondaryText"
                android:textAlignment="center"
                android:id="@+id/tv_title_fire"
                android:fontFamily="@font/lato_light"/>

        <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_description_fireguard"
                android:textSize="23sp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorSecondaryText"
                android:textAlignment="center"
                android:id="@+id/tv_title_four"
                android:fontFamily="@font/lato_light"/>

        <View
                android:layout_width="160dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"/>

    </GridLayout>
</ScrollView>

