<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/left_guideline"
                app:layout_constraintGuide_percent=".05"
                android:orientation="vertical"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/left_one_guideline"
                app:layout_constraintGuide_percent=".15"
                android:orientation="vertical"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/left_two_guideline"
                app:layout_constraintGuide_percent=".45"
                android:orientation="vertical"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/right_guideline"
                app:layout_constraintGuide_percent=".95"
                android:orientation="vertical"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/right_one_guideline"
                app:layout_constraintGuide_percent=".85"
                android:orientation="vertical"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/top_guideline"
                app:layout_constraintGuide_percent=".05"
                android:orientation="horizontal"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bottom_guideline"
                app:layout_constraintGuide_percent=".95"
                android:orientation="horizontal"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bottom_one_guideline"
                app:layout_constraintGuide_percent=".78"
                android:orientation="horizontal"/>

        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/view_back"
                android:background="@color/colorSecondaryText"
                app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                app:layout_constraintRight_toRightOf="@+id/right_guideline"
                app:layout_constraintTop_toTopOf="@+id/top_guideline"
                app:layout_constraintBottom_toBottomOf="@+id/bottom_one_guideline"
                android:layout_marginTop="10dp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintLeft_toLeftOf="@+id/left_one_guideline"
                app:layout_constraintRight_toRightOf="@+id/right_one_guideline"
                app:layout_constraintTop_toTopOf="@+id/top_guideline"
                android:text="@string/lbl_connection"
                android:textSize="23sp"
                android:paddingTop="5dp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorSecondaryText"
                android:textAlignment="center"
                android:id="@+id/tv_title"
                android:fontFamily="@font/lato_bold"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/left_one_guideline"
                app:layout_constraintRight_toRightOf="@+id/right_one_guideline"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_connection_with"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="textStart"
                android:id="@+id/tv_lbl_connection"
                android:fontFamily="@font/lato"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/left_one_guideline"
                app:layout_constraintRight_toRightOf="@+id/right_one_guideline"
                app:layout_constraintTop_toBottomOf="@+id/tv_lbl_connection"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textColor="@color/colorTextPrimary"
                android:textAlignment="textStart"
                android:id="@+id/tv_connection"
                android:fontFamily="@font/lato"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/left_one_guideline"
                app:layout_constraintRight_toRightOf="@+id/right_one_guideline"
                app:layout_constraintTop_toBottomOf="@+id/tv_connection"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_details_contact"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="textStart"
                android:id="@+id/tv_lbl_details"
                android:fontFamily="@font/lato"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/left_one_guideline"
                app:layout_constraintRight_toRightOf="@+id/right_one_guideline"
                app:layout_constraintTop_toBottomOf="@+id/tv_lbl_details"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textColor="@color/colorTextPrimary"
                android:textAlignment="textStart"
                android:id="@+id/tv_details"
                android:fontFamily="@font/lato"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/switchon"
                android:background="@null"
                android:contentDescription="@string/lbl_description_image"
                app:layout_constraintLeft_toLeftOf="@+id/left_one_guideline"
                app:layout_constraintTop_toBottomOf="@+id/tv_details"
                android:id="@+id/sw_audio"
                android:layout_marginTop="10dp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/left_two_guideline"
                app:layout_constraintTop_toTopOf="@+id/sw_audio"
                android:text="@string/lbl_switch_audio"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="textStart"
                android:id="@+id/tv_lbl_audio"
                android:fontFamily="@font/lato"/>


        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/switchoff"
                android:background="@null"
                android:contentDescription="@string/lbl_description_image"
                app:layout_constraintLeft_toLeftOf="@+id/left_one_guideline"
                app:layout_constraintTop_toBottomOf="@+id/sw_audio"
                android:id="@+id/sw_capture"
                android:layout_marginTop="5dp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/left_two_guideline"
                app:layout_constraintTop_toTopOf="@+id/sw_capture"
                android:text="@string/lbl_switch_capture"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="textStart"
                android:id="@+id/tv_lbl_capture"
                android:fontFamily="@font/lato"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/switchon"
                android:background="@null"
                android:contentDescription="@string/lbl_description_image"
                app:layout_constraintLeft_toLeftOf="@+id/left_one_guideline"
                app:layout_constraintTop_toBottomOf="@+id/sw_capture"
                android:id="@+id/sw_location"
                android:layout_marginTop="5dp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/left_two_guideline"
                app:layout_constraintTop_toTopOf="@+id/sw_location"
                android:text="@string/lbl_switch_location"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="textStart"
                android:id="@+id/tv_lbl_location"
                android:fontFamily="@font/lato"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_manual_synchronization"
                android:background="@color/colorLight"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="@+id/left_one_guideline"
                app:layout_constraintRight_toRightOf="@+id/right_one_guideline"
                app:layout_constraintTop_toBottomOf="@+id/sw_location"
                android:id="@+id/bt_validate"
                android:fontFamily="@font/lato_bold"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_health"
                android:background="@null"
                android:contentDescription="@string/lbl_description_image"
                app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/view_back"
                android:id="@+id/ib_health"
                android:layout_marginTop="30dp"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_policies"
                android:background="@null"
                android:contentDescription="@string/lbl_description_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ib_health"
                android:id="@+id/ib_policies"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_fire_guard"
                android:background="@null"
                android:contentDescription="@string/lbl_description_image"
                app:layout_constraintRight_toLeftOf="@+id/right_guideline"
                app:layout_constraintTop_toTopOf="@+id/ib_policies"
                android:id="@+id/ib_fireguard"/>

    </android.support.constraint.ConstraintLayout>


</ScrollView>