<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/left_guideline"
                app:layout_constraintGuide_percent=".10"
                android:orientation="vertical"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/left_one_guideline"
                app:layout_constraintGuide_percent=".45"
                android:orientation="vertical"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/left_two_guideline"
                app:layout_constraintGuide_percent=".30"
                android:orientation="vertical"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/right_guideline"
                app:layout_constraintGuide_percent=".90"
                android:orientation="vertical"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/right_one_guideline"
                app:layout_constraintGuide_percent=".55"
                android:orientation="vertical"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/right_two_guideline"
                app:layout_constraintGuide_percent=".70"
                android:orientation="vertical"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/top_guideline"
                app:layout_constraintGuide_percent=".10"
                android:orientation="horizontal"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bottom_guideline"
                app:layout_constraintGuide_percent=".95"
                android:orientation="horizontal"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bottom_one_guideline"
                app:layout_constraintGuide_percent=".75"
                android:orientation="horizontal"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_x_health"
                android:background="@null"
                android:contentDescription="@string/lbl_description_image"
                app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                app:layout_constraintTop_toTopOf="@+id/top_guideline"
                android:id="@+id/ib_health"
                android:layout_marginTop="10dp"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_x_policies"
                android:background="@null"
                android:contentDescription="@string/lbl_description_image"
                app:layout_constraintRight_toRightOf="@+id/right_guideline"
                app:layout_constraintTop_toTopOf="@+id/ib_health"
                android:id="@+id/ib_policies"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                app:layout_constraintRight_toRightOf="@+id/left_one_guideline"
                app:layout_constraintTop_toBottomOf="@+id/ib_health"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_description_health"
                android:textSize="23sp"
                android:textColor="@color/colorSecondaryText"
                android:textAlignment="center"
                android:id="@+id/tv_title_health"
                android:fontFamily="@font/lato_light"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/right_one_guideline"
                app:layout_constraintRight_toRightOf="@+id/right_guideline"
                app:layout_constraintTop_toTopOf="@+id/tv_title_health"
                android:text="@string/lbl_description_policies"
                android:textSize="23sp"
                android:textColor="@color/colorSecondaryText"
                android:textAlignment="center"
                android:id="@+id/tv_title_policies"
                android:fontFamily="@font/lato_light"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_x_fire"
                android:background="@null"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/lbl_description_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_health"
                android:id="@+id/ib_fireguard"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/left_two_guideline"
                app:layout_constraintRight_toRightOf="@+id/right_two_guideline"
                app:layout_constraintTop_toBottomOf="@+id/ib_fireguard"
                android:text="@string/lbl_description_fireguard"
                android:textSize="23sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorSecondaryText"
                android:textAlignment="center"
                android:id="@+id/tv_title_fire"
                android:fontFamily="@font/lato_light"/>

    </android.support.constraint.ConstraintLayout>


</ScrollView>